--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -304,3 +304,4 @@
 "DoNotAskMeAgain": "Frag mich nicht mehr"
 "NoLongerAskingYou": "Du wirst nicht länger danach gefragt."
 "RatingSuggestion": "Kartenbewertung vorschlagen"
+"SideBarNextStep": "Nächster Schritt:"
