--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -16,7 +16,7 @@
 "unchecked": "☐"
 "parkourname": "Parkourname"
 "clicktosetname": "Klicke hier, um einen\nParkournamen zu setzen."
-"toplisthologramlocation": "Ort für Toplist Hologram"
+"toplisthologramlocation": "Toplist Hologram"
 "toplistLocationHasBeenSet": "Der Ort für die Hologram Topliste wurde gesetzt."
 "settoplistlocation": "Klicke hier, um deinen\nStandort für das Toplist\nHologramm zu setzen."
 "parkourinplaymode": "Parkour im Spielmodus"
@@ -132,7 +132,7 @@
 "newMapItemDesc": "Erstellt eine neue Karte.\n%{parkour/loreLine}%\n&7Preis: &6&l<price> &7%{parkour/currencyNamePlural}%"
 "todoHeader": "Zu erledigen: &b(Anklickbar)"
 "textClickable": "&bAnklickbarer Text&7\n&7Der Text in dieser\n&7Nachricht ist anklickbar."
-"spawnlocation": "Parkour Spawn setzen"
+"spawnlocation": "Parkour Spawn"
 "setspawnlocation": "&7Klicke hier, um den Spawn\n&7des Parkours zu setzen."
 "SendRequestTo": "Anfrage an <player> senden"
 "thisPlayerIsLeading": "<leader> leitet die Gruppe von <member>."
