--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -305,3 +305,4 @@
 "NoLongerAskingYou": "Du wirst nicht länger danach gefragt."
 "RatingSuggestion": "Kartenbewertung vorschlagen"
 "SideBarNextStep": "Nächster Schritt:"
+"YouRatedTheMap": "Du hast diese Karte bewertet."
