--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -97,7 +97,7 @@
 "clickToSelectAllDifficulties": "&7Klicke hier, um alle\n&7Schwierigkeitsgrade anzuzeigen."
 "BEGINNERMaps": "Beginner Karten"
 "EASYMaps": "Einfache Karten"
-"MEDIUMMaps": "Mittlere Karteen"
+"MEDIUMMaps": "Mittlere Karten"
 "HARDMaps": "Schwere Karten"
 "EXPERTMaps": "Experten Karten"
 "ALLMaps": "Alle Karten"
