--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -306,3 +306,4 @@
 "RatingSuggestion": "Kartenbewertung vorschlagen"
 "SideBarNextStep": "Nächster Schritt:"
 "YouRatedTheMap": "Du hast diese Karte bewertet."
+"SpawnHasToBeAir": "Der Spawn muss an einem freien Ort gesetzt werden."
