--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -307,3 +307,6 @@
 "SideBarNextStep": "Nächster Schritt:"
 "YouRatedTheMap": "Du hast diese Karte bewertet."
 "SpawnHasToBeAir": "Der Spawn muss an einem freien Ort gesetzt werden."
+"PlayerPublishedNewParkour": "<player> hat einen neuen Parkour veröffentlicht!"
+"VisitNamedMap": "<mapName> spielen"
+"ClickToVisitNamedMap": "Klicke hier, um die\nKarte zu besuchen."
