--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -310,3 +310,4 @@
 "PlayerPublishedNewParkour": "<player> hat einen neuen Parkour veröffentlicht!"
 "VisitNamedMap": "<mapName> spielen"
 "ClickToVisitNamedMap": "Klicke hier, um die\nKarte zu besuchen."
+"YouAreInViewerMode": "Du bist im Zuschauermodus welchsle, um zu starten."
