--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -311,3 +311,4 @@
 "VisitNamedMap": "<mapName> spielen"
 "ClickToVisitNamedMap": "Klicke hier, um die\nKarte zu besuchen."
 "YouAreInViewerMode": "Du bist im Zuschauermodus. Welchsle, um zu starten."
+"PartyInviteItemName": "Spieler in Party einladen"
