--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -159,7 +159,7 @@
 "youAreNotInAParty": "Du bist in keiner Party."
 "youHaveBeenKickedBy": "Du wurdest von <player> gekickt."
 "playerHasBeenKicked": "<player> wurde gekickt."
-"onlyPartlyLeaderCanDoThat": "Nur der Party Leader kann das."
+"onlyPartlyLeaderCanDoThat": "Nur der Party Leader (<leader>) kann das."
 "playerLeftTheParty": "<player> hat die Party verlassen."
 "playerLeftTheGame": "<player> hat das Spiel verlassen."
 "partyHasDissolved": "Die Party hat sich aufgelöst."
@@ -312,3 +312,9 @@
 "ClickToVisitNamedMap": "Klicke hier, um die\nKarte zu besuchen."
 "YouAreInViewerMode": "Du bist im Zuschauermodus. Welchsle, um zu starten."
 "PartyInviteItemName": "Spieler in Party einladen"
+"PartyMenuItemName": "Partyeinstellungen"
+"PartyMenuName": "Partyeinstellungen"
+"PartyMenuPlayerLoreLeader1": "&6&lLeiter"
+"PartyMenuPlayerLoreMember1": "&6&lMitglied"
+"PartyPlayerMenuClickToKick": "\n%{parkour/loreLine}%\nKlicke hier, um den\nSpieler zu kicken."
+"PartyPlayerMenuClickToLeave": "\n%{parkour/loreLine}%\nKlicke hier, um die\nParty zu verlassen."
