--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -108,7 +108,8 @@
 "EXPERTName": "Experte"
 "ALLName": "Alle"
 "backToDiffSelection": "&r&7Zurück zur Auswahl\n&r&7des Schwierigkeitsgrades."
-"mapItemLore": "&7Besuche: &6<visits>\n&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
+"mapItemLore": "&7von <builder>\n%{parkour/loreLine}%\n&7Besuche: &6<visits>\n&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
+"mapItemLoreMore": "&7von <builder>\n&7Besuche: &6<visits>\n&7Bewertung: &6<rating>\n&7Erstellt: &6<created>\n%{parkour/loreLine}%\n&7WR: <wr>\nvon &7<wrHolder>"
 "ascendingItemName": "&f&lAufsteigend"
 "descendingItemName": "&f&lAbsteigend"
 "descendingItemDesc": "&r&7Zeigt die Ergebnisse\n&r&7in absteigender\n&r&7Reihenfolge an."
