--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -319,3 +319,10 @@
 "PartyMenuPlayerLoreMember1": "&6&lMitglied"
 "PartyPlayerMenuClickToKick": "\n%{parkour/loreLine}%\nKlicke hier, um den\nSpieler zu kicken."
 "PartyPlayerMenuClickToLeave": "\n%{parkour/loreLine}%\nKlicke hier, um die\nParty zu verlassen."
+"MoreGuiData": "Erweitere Ansicht (Langsamer)"
+"LoreForsideBar": "Die Seitenleeiste wird\nam rechten Rand im\nSpiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForbossBar": "Die Bossleiste wird\nam oberen Rand im\nSpiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForactionBar": "Die Aktionsleiste wird\nüber der Hotbar\nim Spiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreFortopListHolograms": "Die Toplisten\nHologramme werden\nin den Karten gezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForRatingSuggestion": "Schlage am Ende von\nKarten vor, diese zu\nbewerten.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForMoreGuiData": "Lade mehr Daten in\nder Kartenauswahl im\nKompass, die Anzeige\nist dadurch langsamer.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
