--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -304,7 +304,7 @@
 "RateThisMap": "Wie hat dir <mapname> gefallen?"
 "DoNotAskMeAgain": "Frag mich nicht mehr"
 "NoLongerAskingYou": "Du wirst nicht länger danach gefragt."
-"RatingSuggestion": "Kartenbewertung vorschlagen"
+"RatingSuggestion": "Kartenbewertungen"
 "SideBarNextStep": "Nächster Schritt:"
 "YouRatedTheMap": "Du hast diese Karte bewertet."
 "SpawnHasToBeAir": "Der Spawn muss an einem freien Ort gesetzt werden."
@@ -319,8 +319,8 @@
 "PartyMenuPlayerLoreMember1": "&6&lMitglied"
 "PartyPlayerMenuClickToKick": "\n%{parkour/loreLine}%\nKlicke hier, um den\nSpieler zu kicken."
 "PartyPlayerMenuClickToLeave": "\n%{parkour/loreLine}%\nKlicke hier, um die\nParty zu verlassen."
-"MoreGuiData": "Erweitere Ansicht (Langsamer)"
-"LoreForsideBar": "Die Seitenleeiste wird\nam rechten Rand im\nSpiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"MoreGuiData": "Erweitere Ansicht"
+"LoreForsideBar": "Die Seitenleiste wird\nam rechten Rand im\nSpiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
 "LoreForbossBar": "Die Bossleiste wird\nam oberen Rand im\nSpiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
 "LoreForactionBar": "Die Aktionsleiste wird\nüber der Hotbar\nim Spiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
 "LoreFortopListHolograms": "Die Toplisten\nHologramme werden\nin den Karten gezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
