--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -108,7 +108,8 @@
 "EXPERTName": "Experte"
 "ALLName": "Alle"
 "backToDiffSelection": "&r&7Zurück zur Auswahl\n&r&7des Schwierigkeitsgrades."
-"mapItemLore": "&7Besuche: &6<visits>\n&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
+"mapItemLore": "&7von <builder>\n%{parkour/loreLine}%\n&7Besuche: &6<visits>\n&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
+"mapItemLoreMore": "&7von <builder>\n%{parkour/loreLine}%\n&7Besuche: &6<visits>\n&7Bewertung: &6<rating>\n&7Erstellt: &6<created>\n%{parkour/loreLine}%\n&7WR: <wr>\nvon &7<wrHolder>"
 "ascendingItemName": "&f&lAufsteigend"
 "descendingItemName": "&f&lAbsteigend"
 "descendingItemDesc": "&r&7Zeigt die Ergebnisse\n&r&7in absteigender\n&r&7Reihenfolge an."
@@ -159,7 +160,7 @@
 "youAreNotInAParty": "Du bist in keiner Party."
 "youHaveBeenKickedBy": "Du wurdest von <player> gekickt."
 "playerHasBeenKicked": "<player> wurde gekickt."
-"onlyPartlyLeaderCanDoThat": "Nur der Party Leader kann das."
+"onlyPartlyLeaderCanDoThat": "Nur der Party Leader (<leader>) kann das."
 "playerLeftTheParty": "<player> hat die Party verlassen."
 "playerLeftTheGame": "<player> hat das Spiel verlassen."
 "partyHasDissolved": "Die Party hat sich aufgelöst."
@@ -303,7 +304,7 @@
 "RateThisMap": "Wie hat dir <mapname> gefallen?"
 "DoNotAskMeAgain": "Frag mich nicht mehr"
 "NoLongerAskingYou": "Du wirst nicht länger danach gefragt."
-"RatingSuggestion": "Kartenbewertung vorschlagen"
+"RatingSuggestion": "Kartenbewertungen"
 "SideBarNextStep": "Nächster Schritt:"
 "YouRatedTheMap": "Du hast diese Karte bewertet."
 "SpawnHasToBeAir": "Der Spawn muss an einem freien Ort gesetzt werden."
@@ -312,3 +313,23 @@
 "ClickToVisitNamedMap": "Klicke hier, um die\nKarte zu besuchen."
 "YouAreInViewerMode": "Du bist im Zuschauermodus. Welchsle, um zu starten."
 "PartyInviteItemName": "Spieler in Party einladen"
+"PartyMenuItemName": "Partyeinstellungen"
+"PartyMenuName": "Partyeinstellungen"
+"PartyMenuPlayerLoreLeader1": "&6&lLeiter"
+"PartyMenuPlayerLoreMember1": "&6&lMitglied"
+"PartyPlayerMenuClickToKick": "\n%{parkour/loreLine}%\nKlicke hier, um den\nSpieler zu kicken."
+"PartyPlayerMenuClickToLeave": "\n%{parkour/loreLine}%\nKlicke hier, um die\nParty zu verlassen."
+"MoreGuiData": "Erweitere Ansicht"
+"LoreForsideBar": "Die Seitenleiste wird\nam rechten Rand im\nSpiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForbossBar": "Die Bossleiste wird\nam oberen Rand im\nSpiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForactionBar": "Die Aktionsleiste wird\nüber der Hotbar\nim Spiel angezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreFortopListHolograms": "Die Toplisten\nHologramme werden\nin den Karten gezeigt.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForRatingSuggestion": "Schlage am Ende von\nKarten vor, diese zu\nbewerten.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"LoreForMoreGuiData": "Lade mehr Daten in\nder Kartenauswahl im\nKompass, die Anzeige\nist dadurch langsamer.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
+"SHULKERTRIGGER": "Shulker Auslösen"
+"actionLoreSHULKERTRIGGER": "Dauer: <ticks> Ticks\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick"
+"actionCardInfoSHULKERTRIGGER": "Klicke mit der Aktionskarte,\num das Menü zu öffnen.\nSchleiche und klicke auf\neine Shulkerbox, um diese\nauszuwählen.\nLässt eine Shulkerbox für\ndie gewählten Ticks geöffnet."
+"actionCardInfoTextSHULKERTRIGGER": "Öffnet eine Shulkerbox.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoSHULKERTRIGGER}%"
+"ActionCardShortDescSHULKERTRIGGER": "Öffnet eine Shulkerbox"
+"ShulkerHasBeenSavedInCard": "Der Ort dieser Shulkerbox wurde gespeichert."
+"sneakToToggle": "Schleiche, um Türen umzustellen."
