--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -334,3 +334,4 @@
 "ShulkerHasBeenSavedInCard": "Der Ort dieser Shulkerbox wurde gespeichert."
 "sneakToToggle": "Schleiche, um Türen umzustellen."
 "mapItemRunsLore": "&7von <builder>\n%{parkour/loreLine}%\n&7Deine Zeit: &6<time>\n&7Gelaufen am: &6<date>"
+"DatePattern": "dd.MM.yyyy"
