--- a/Language/packs/RohrHomes_en.yml
+++ b/Language/packs/RohrHomes_en.yml
@@ -5,3 +5,4 @@
 "deletedHome": "&6<name>&7 has been deleted."
 "HomeSaved": "&6<name>&7 has been saved as home."
 "ErrorWhileSaving": "&7A error occured, please contact &6/hilfe"
+"PlayersHomes": "Homes of the player:"
