--- a/Language/packs/RohrHomes_de.yml
+++ b/Language/packs/RohrHomes_de.yml
@@ -6,3 +6,4 @@
 "HomeSaved": "&6<name>&7 wurde als Home gespeichert."
 "ErrorWhileSaving": "&7Ein Fehler ist aufgetreten, kontaktiere &6/hilfe"
 "PlayersHomes": "Homes des Spielers:"
+"ProtectedArea": "Du kannst in diesem gesicherten Bereich kein Home erstellen."
