--- a/Language/packs/RohrHomes_en.yml
+++ b/Language/packs/RohrHomes_en.yml
@@ -6,4 +6,4 @@
 "HomeSaved": "&6<name>&7 has been saved as home."
 "ErrorWhileSaving": "&7A error occured, please contact &6/hilfe"
 "PlayersHomes": "Homes of the player:"
-"ProtectedArea": "You can't create a home in this protected area."
+"ProtectedArea": "You can't create a home within this protected area."
