--- a/Language/packs/RohrHomes_de.yml
+++ b/Language/packs/RohrHomes_de.yml
@@ -5,5 +5,5 @@
 "deletedHome": "&6<name>&7 wurde gelöscht."
 "HomeSaved": "&6<name>&7 wurde als Home gespeichert."
 "ErrorWhileSaving": "&7Ein Fehler ist aufgetreten, kontaktiere &6/hilfe"
-"PlayersHomes": "Homes des Spielers:"
+"PlayersHomes": "Homes von &6<name>&7:"
 "ProtectedArea": "Du kannst in diesem gesicherten Bereich kein Home erstellen."
