--- a/Language/packs/money_en.yml
+++ b/Language/packs/money_en.yml
@@ -6,3 +6,5 @@
 "currencyNamePlural": "Taler"
 "eventCurrencyName": "EventPoints"
 "eventCurrencyNameShort": "EP"
+"notEnoughEventCurrency": "You don't have enough %{money/eventCurrencyName}%."
+"notEnoughCurrency": "You don't have enough %{money/currencyName}%."
