--- a/Language/packs/money_de.yml
+++ b/Language/packs/money_de.yml
@@ -4,7 +4,8 @@
 "currencyName": "Taler"
 "currencyNameShort": "Taler"
 "currencyNamePlural": "Taler"
-"eventCurrencyName": "Eventpunkte"
+"eventCurrencyName": "Eventpunkt"
+"eventCurrencyNamePlural": "Eventpunkte"
 "eventCurrencyNameShort": "EP"
 "notEnoughEventCurrency": "Du hast nicht genug %{money/eventCurrencyName}%."
 "notEnoughCurrency": "Du hast nicht genug %{money/currencyName}%."
