--- a/Language/packs/money_en.yml
+++ b/Language/packs/money_en.yml
@@ -4,7 +4,8 @@
 "currencyName": "Taler"
 "currencyNameShort": "Taler"
 "currencyNamePlural": "Taler"
-"eventCurrencyName": "EventPoints"
+"eventCurrencyName": "Eventpoint"
+"eventCurrencyNamePlural": "Eventpoints"
 "eventCurrencyNameShort": "EP"
 "notEnoughEventCurrency": "You don't have enough %{money/eventCurrencyName}%."
 "notEnoughCurrency": "You don't have enough %{money/currencyName}%."
