--- a/Language/packs/survival_en.yml
+++ b/Language/packs/survival_en.yml
@@ -3,4 +3,4 @@
 "BoughtBonusChunk": "You bought one bonus chunk."
 "BonusChunkCommand1": "Buy bonus chunk: &6/bonuschunk <Town> [<Amount>]"
 "BonusChunkCommand2": "Price: &6&l1 &7%{money/eventCurrencyName}%"
-"CouldNotFindTown": "&7Cloudn't find a town named &6<town> &7."
+"CouldNotFindTown": "&7Couldn't find a town named &6<town> &7."
