--- a/Language/packs/money_en.yml
+++ b/Language/packs/money_en.yml
@@ -5,7 +5,7 @@
 "currencyNameShort": "Taler"
 "currencyNamePlural": "Taler"
 "eventCurrencyName": "Eventpoint"
-"eventCurrencyNamePlural": "Eventpoints"
+"eventCurrencyNamePlural": "Event Points"
 "eventCurrencyNameShort": "EP"
 "notEnoughEventCurrency": "You don't have enough %{money/eventCurrencyName}%."
-"notEnoughCurrency": "You don't have enough %{money/currencyName}%."
+"notEnoughCurrency": "You don't have enough %{money/eventCurrencyNamePlural}%."
