--- a/Language/packs/chat_de.yml
+++ b/Language/packs/chat_de.yml
@@ -1,5 +1,6 @@
 "prefixHover&b[BL]": "&b&lBauleitung\n&7Verteilt die Aufgaben\n&7der Builder weiter."
 "prefixHover&2[EM]": "&2&lEventmoderator\n&7Leitet Events auf dem Server"
+"prefixHover&a[Team]": "&a&lTeam\n&7Ein Teammitglied des Servers"
 "prefixHover&3[E]&r": "&3&lEhrenmitglied\n&7Ein ehemaliges Teammitglied"
 "prefixHover&6[SB-A]": "&6&lSkyBlock Admin\n&7Leitet den SkyBlock Spielmodus"
 "prefixHover&6[SV-A]&r": "&6&lSurvival Admin\n&7Leitet den Survival Spielmodus"
