--- a/Language/packs/chat_en.yml
+++ b/Language/packs/chat_en.yml
@@ -1,5 +1,6 @@
 "prefixHover&b[BL]": "&b&lConstruction management\n&7Distributes the tasks\n&7for the builders."
 "prefixHover&2[EM]": "&2&lEvent Moderator\n&7Manages events on the server"
+"prefixHover&a[Team]": "&a&lTeam\n&7A team member of the server"
 "prefixHover&3[E]&r": "&3&lHonorary member\n&7A former team member"
 "prefixHover&6[SB-A]": "&6&lSkyBlock Admin\n&7Directs the SkyBlock game mode"
 "prefixHover&6[SV-A]&r": "&6&lSurvival Admin\n&7Directs the Survival game mode"
