--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -220,7 +220,7 @@
 "VELOCITY": "Schwung"
 "actionCardInfoVELOCITY": "Klicke mit der Aktionskarte,\num das Menü zu öffnen.\nGibt dem Spieler Schwung\nzu den vorher definierten\nKoordinaten."
 "actionCardInfoTextVELOCITY": "Gibt einem Spieler Schwung.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoVELOCITY}%"
-"velocityCoordinateChangeInfo": "Setze die Stärke des\nSchwungs für diese Achse.\n%{parkour/loreLine}%\nStärke: &6&l<axisStrength>\n%{parkour/loreLine}%\nStärke ▲: &6&lLinksklick\nStärke ▼: &6&lRechtsklick"
+"velocityCoordinateChangeInfo": "Setze die Stärke des\nSchwungs für diese Achse.\n%{parkour/loreLine}%\nStärke: &6&l<axisStrength>\n%{parkour/loreLine}%\nStärke ▲: &6&lRechtsklick\nStärke ▼: &6&lLinksklick"
 "velocityCoordinate": "<axis> Koordinate"
 "PLATFORM": "Plattform"
 "actionCardInfoPLATFORM": "Erschafft eine bewegliche\nPlattform, auf der\nsich Spieler bewegen können."
