--- a/Language/packs/event_de.yml
+++ b/Language/packs/event_de.yml
@@ -1,10 +1,11 @@
-"disqualificationReason-MorePointsThanPossible": "Der Run dieses Spielers\nwurde disqualifiziert, weil\nmehr Punkte erreicht wurden\, als das Spiel für diesen Spieler\nreserviert hat."
-"disqualificationReason-Harassment": "Der Run dieses Spielers\wurde wegen Belästigung\durch den Spieler disqualifiziert."
-"disqualificationReason-GameAbuse": "Der Run dieses Spielers\wurde wegen Spielmissbrauchs durch den Spieler disqualifiziert."
-"disqualificationReason-RuleBroken": "Der Run dieses Spielers\wurde disqualifiziert, weil der Spieler gegen die Regeln verstoßen hat."
-"disqualificationReason-ChatAbuse": "Der Run dieses Spielers\wurde wegen Chat-Missbrauchs durch den Spieler disqualifiziert."
+"disqualificationReason-MorePointsThanPossible": "Der Run dieses Spielers\nwurde disqualifiziert, weil\nmehr Punkte erreicht wurden\n, als das Spiel für diesen Spieler\nreserviert hat."
+"disqualificationReason-Harassment": "Der Run dieses Spielers\nwurde wegen Belästigung\ndurch den Spieler disqualifiziert."
+"disqualificationReason-GameAbuse": "Der Run dieses Spielers\nwurde wegen Spielmissbrauchs durch den Spieler disqualifiziert."
+"disqualificationReason-RuleBroken": "Der Run dieses Spielers\nwurde disqualifiziert, weil der Spieler gegen die Regeln verstoßen hat."
+"disqualificationReason-ChatAbuse": "Der Run dieses Spielers\nwurde wegen Chat-Missbrauchs durch den Spieler disqualifiziert."
 "rewardNotFound": "Du hast eine ungültige Prämie angegeben. Bitte wähle zwischen EP und HP."
 "rewardSetToEP": "Deine Belohnung wurde auf EP (Eventpunkte) gesetzt."
 "rewardSetToHP": "Deine Belohnung wurde auf HP (Hive Power) gesetzt."
 "hivehandleset": "Dein Hive-Benutzername wurde auf @<handle> eingestellt."
 "newEventHourStarted": "Eine neue Eventstsunde hat begonnen! Du kannst diese es jederzeit mit /eventstunde zurücksetzen."
+"eventHourEnded": "Deine Eventstunde ist vorbei! Du hast <score> Punkte erreicht."
