Added new translations

--- a/Language/packs/bauevent_en.yml
+++ b/Language/packs/bauevent_en.yml
@@ -17,3 +17,12 @@
 "plot": "Plot"
 "teleport": "Teleport"
 "plotsLore": "&7Click here, to get\n&7to Plot &b<plotId>&7."
+"placeRedWoolWhereCenterOfPlotShouldBe": "Place the red wool where the center of your plot should be."
+"ifNoTeleportUseRtp": "If you have not been teleported or want to choose a different biome, use /rtp minecraft:biome."
+"worldBorderHasBeenSent": "Plot border enabled. To toggle: /toggleworldborder."
+"plotIsBeingPrepared": "Your plot is getting ready. This can take a few moments."
+"eventOpen": "Open"
+"eventClosed": "Closed"
+"eventTopicHead": "Topic:"
+"lastWinner": "Last Winner:"
+"claimable": "-- Claimable --"
