--- a/Language/packs/bauevent_de.yml
+++ b/Language/packs/bauevent_de.yml
@@ -17,3 +17,12 @@
 "plot": "Plot"
 "teleport": "Teleport"
 "plotsLore": "&7Klicke Hier, um zum\n&7Plot &b<plotId>&7 zu gelangen."
+"placeRedWoolWhereCenterOfPlotShouldBe": "Platziere die rote Wolle an der Stelle, an der die Mitte deines Plots sein soll."
+"ifNoTeleportUseRtp": "Wenn du nicht teleportiert wurdest oder du ein anderes Biom suchst, verwende /rtp minecraft:biome."
+"worldBorderHasBeenSent": "Plotgrenze aktiviert. Umschaltbar mit /toggleworldborder"
+"plotIsBeingPrepared": "Dein Plot wird vorbereitet. Das kann einige Sekunden dauern."
+"eventOpen": "Geöffnet"
+"eventClosed": "Geschlossen"
+"eventTopicHead": "Thema:"
+"lastWinner": "Letzter Gewinner:"
+"claimable": "-- Claimbar --"
