--- a/Language/packs/survival_de.yml
+++ b/Language/packs/survival_de.yml
@@ -4,3 +4,4 @@
 "BonusChunkCommand1": "Bonuschunk kaufen: &6/bonuschunk <Stadtname> [<Menge>]"
 "BonusChunkCommand2": "Preis: &6&l1&7 Eventpunkt"
 "CouldNotFindTown": "&7Die Stadt &6<town> &7konnte nicht gefunden werden."
+"storageUnit": "Lagersystem"
