--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -342,3 +342,4 @@
 "coinBlock": "Münze"
 "coinblockdesc": "&7Markiert eine Münze, die\n&7von Spielern im Parkour gesammelt\n&7werden können."
 "setParkourSpawnFirst": "Setze zuerst den Spawn des Parkours: /parkour setspawn"
+"coinGet": "Münze erhalten!"
