--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -347,4 +347,4 @@
 "anyPercentRun": "Any%"
 "100PercentRun": "100%"
 "anyPercentRunDesc": "Zeigt Speedruns von Spielern,\ndie das Ziel verfolgen, die\nMap so schnell wie möglich\nzu beenden, ohne dabei\nalle Münzen zu sammeln."
-"100PercentRunDesc": "Zeigt Speedruns von Spielern,\ndie das Ziel verfolgen, die\nMap vollständig zu meistern,\nindem sie alle Münzen\nsammeln und alle vorgegebenen\nAufgaben abschließen, um das Spiel\nzu 100% zu vervollständigen."
+"100PercentRunDesc": "Zeigt Speedruns von Spielern,\ndie das Ziel verfolgen, die\nMap vollständig zu meistern,\nindem sie alle Münzen sammeln und\nalle vorgegebenen Aufgaben abschließen,\n um das Spiel zu 100%\nzu vervollständigen."
