--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -338,10 +338,10 @@
 "LoreForAutoSpectateAfterRun": "Automatisch in den\nZuschauermodus wechseln\nwenn der Run zuende ist.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
 "AutoSpectateAfterRun": "Automatischer Zuschauermodus"
 "AutoLobbyAfterRunEnabled": "Der Automatische Lobby-Teleport wurde aktiviert, du kannst ihn jederzeit im Kopfmenü deaktivieren."
-"AutoLobbySuggestion": "Willst du nach jedem Parkour zur Lobby teleportiert werden?"
+"AutoLobbySuggestion": "Willst du nach einem Run direkt zur Lobby?"
 "LoreForAutoLobbyAfterRun": "Automatisch zurück zur\nLobby teleportieren\nwenn der Run zuende ist.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
 "AutoLobbyAfterRun": "Automatischer Lobby-Teleport"
-"ActivateAutoLobbyAfterRun": "[Automatischen Lobby-Teleport aktivieren]"
+"ActivateAutoLobbyAfterRun": "[Lobby-Teleport aktivieren]"
 "coinblockplaced": "Münze platziert"
 "coinblockremoved": "Münze entfernt"
 "coinBlock": "Münze"
