--- a/Language/packs/parkour_en.yml
+++ b/Language/packs/parkour_en.yml
@@ -353,3 +353,5 @@
 "100PercentRun": "100%"
 "anyPercentRunDesc": "Zeigt Speedruns von Spielern,\ndie das Ziel verfolgen, die\nMap so schnell wie möglich\nzu beenden, ohne dabei\nalle Münzen zu sammeln."
 "100PercentRunDesc": "Zeigt Speedruns von Spielern,\ndie das Ziel verfolgen, die\nMap vollständig zu meistern,\nindem sie alle Münzen sammeln und\nalle vorgegebenen Aufgaben abschließen,\n um das Spiel zu 100%\nzu vervollständigen."
+"CoinGlowEffect": "Leuchtende Münzen"
+"LoreForCoinGlowEffect": "Lässt die Münzen durch\nihr Leuchten auch durch Wände\nscheinen, um besser sichtbar zu sein.\n%{parkour/loreLine}%\n%{parkour/clickToToggleBar}%"
